--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {  
             } 
             else{
-                window.location.href = 'http://bj.offcn.com/zg/gk_wjb/';
+                // window.location.href = 'http://bj.offcn.com/zg/gk_wjb/';
             }
         }  
         browserRedirect();
@@ -44,7 +44,7 @@
         pgScale();
         window.onresize=pgScale;
     </script>
-<script type="text/javascript" src="http://www.offcn.com/statics/js/sdc_offcn_wap.js"></script>
+<!-- <script type="text/javascript" src="http://www.offcn.com/statics/js/sdc_offcn_wap.js"></script> -->
 </head>
 <body style="overflow-x: hidden;">
 
